# pico-bext

./: CMakeLists.txt  NextionX.cpp  NextionX.h  README.md  dns.cpp  dns.h  entity.cpp  entity.h  lan.cpp  lan.h  lwipopts.h  main.cpp  mqtt.cpp  mqtt.h  mqtt_e.cpp  nxt.cpp  nxt.h
doc/: best.HMI
